removed absolute links

--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,11 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-		<link rel='stylesheet' href='/assets/site.css'>
+		<link rel='stylesheet' href='assets/site.css'>
 	</head>
 	<body>
 		<canvas id='logo' height='300'>
-			<img src='/assets/logo.png'/>
+			<img src='assets/logo.png'/>
 		</canvas>
 		<h1 id='welcome' style='opacity: 0;'>
 			<i>H</i><i>e</i><i>l</i><i>l</i><i>o</i><i>,</i><i> </i><i>w</i><i>o</i><i>r</i><i>l</i><i>d</i><i>!</i><br>
@@ -52,6 +52,6 @@
 			<strong>Open Source</strong>
 		</div>
 
-		<script src='/assets/site.js'></script>
+		<script src='assets/site.js'></script>
 	</body>
 </html>
